--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
           <img src="images/interface7.png" alt="logo Flap Flap Oiseaux'">
           <p>Flap Flap Oiseaux</p>
       </div>
+      <div class="interface" onclick="navigateTo('page8.html')">
+          <img src="images/interface8.jpg" alt="logo Wordle'">
+          <p>Wordle</p>
+      </div>
+      <div class="interface" onclick="navigateTo('page9.html')">
+          <img src="images/interface9.jpg" alt="logo Paint Empire'">
+          <p>Paint Empire</p>
+      </div>
+      <div class="interface" onclick="navigateTo('page10.html')">
+          <img src="images/interface10.jpg" alt="logo Blokus'">
+          <p>Blokus</p>
+      </div>
     </div>
     <script src="scripts/script.js"></script>
 </body>
