--- a/page9.html
+++ b/page9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎨 Art Empire - Le Simulateur d'Artiste Ultime</title>
+    <title>🎨 Paint Empire - Le Simulateur Peintre Ultime</title>
     <style>
         * {
             margin: 0;
