--- a/index.html
+++ b/index.html
@@ -1352,12 +1352,12 @@
                 <div class="stat-label">Jeux</div>
             </div>
             <div class="stat-box">
-                <div class="stat-value" id="totalTime">0</div>
-                <div class="stat-label">Heures</div>
-            </div>
-            <div class="stat-box">
                 <div class="stat-value" id="totalFavorites">0</div>
                 <div class="stat-label">Favoris</div>
+            </div>
+            <div class="stat-box">
+                <div class="stat-value" id="userLevelTop">1</div>
+                <div class="stat-label">Niveau</div>
             </div>
         </div>
     </div>
@@ -1573,7 +1573,7 @@
             { id: 8, name: 'Wordle', category: 'puzzle', image: 'images/interface8.jpg', page: 'page8.html', badge: 'top', plays: 0, time: 0 },
             { id: 9, name: 'Paint Empire', category: 'strategy', image: 'images/interface9.jpg', page: 'page9.html', badge: '', plays: 0, time: 0 },
             { id: 10, name: 'Blokus', category: 'strategy', image: 'images/interface10.jpg', page: 'page10.html', badge: '', plays: 0, time: 0 },
-            { id: 11, name: 'F1 Manager', category: 'strategy', image: 'images/interface11.jpg', page: 'page-11/index.html', badge: 'new', plays: 0, time: 0 }
+            { id: 11, name: 'F1 Manager', category: 'strategy', image: 'images/interface11.jpg', page: 'page11/index.html', badge: 'new', plays: 0, time: 0 }
         ];
 
         const avatars = ['🎮', '👾', '🕹️', '🎯', '🏆', '⚡', '🔥', '💎', '🌟', '🎪', '🎨', '🎭', '🎬', '🎸', '🎺'];
