--- a/index.html
+++ b/index.html
@@ -1567,8 +1567,8 @@
             { id: 7, name: 'Flap Flap Oiseaux', category: 'action', image: 'images/interface7.png', page: 'page7.html', badge: 'new', plays: 0, time: 0 },
             { id: 8, name: 'Wordle', category: 'puzzle', image: 'images/interface8.jpg', page: 'page8.html', badge: 'top', plays: 0, time: 0 },
             { id: 9, name: 'Paint Empire', category: 'strategy', image: 'images/interface9.jpg', page: 'page9.html', badge: '', plays: 0, time: 0 },
-            { id: 10, name: 'Blokus', category: 'strategy', image: 'images/interface10.jpg', page: 'page10.html', badge: '', plays: 0, time: 0 },
-            { id: 11, name: 'F1 Manager', category: 'strategy', image: 'images/interface11.jpg', page: 'page11.html', badge: 'new', plays: 0, time: 0 }
+            { id: 10, name: 'Code Secret', category: 'strategy', image: 'images/interface10.jpg', page: 'page10.html', badge: '', plays: 0, time: 0 },
+            { id: 11, name: 'F1 Manager', category: 'strategy', image: 'images/interface11.jpg', page: 'page-11/page11.html', badge: 'new', plays: 0, time: 0 }
         ];
 
         const avatars = ['🎮', '👾', '🕹️', '🎯', '🏆', '⚡', '🔥', '💎', '🌟', '🎪', '🎨', '🎭', '🎬', '🎸', '🎺'];
