--- a/page1.html
+++ b/page1.html
@@ -1,18 +1,323 @@
-<!-- HTML pour le jeu "juste prix" -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Juste Prix</title>
-  <link href="styles/page1.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Le Juste Prix</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
+        }
+        .container {
+            background: white;
+            border-radius: 20px;
+            padding: 40px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            max-width: 500px;
+            width: 100%;
+            text-align: center;
+        }
+        h1 {
+            color: #667eea;
+            margin-bottom: 30px;
+            font-size: 2.5em;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .product-image {
+            width: 100%;
+            max-width: 300px;
+            height: 300px;
+            object-fit: cover;
+            border-radius: 15px;
+            margin-bottom: 20px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+        .product-name {
+            font-size: 1.5em;
+            color: #333;
+            margin-bottom: 20px;
+            font-weight: bold;
+        }
+        .timer {
+            font-size: 2em;
+            color: #e74c3c;
+            margin-bottom: 20px;
+            font-weight: bold;
+            padding: 10px;
+            background: #ffe6e6;
+            border-radius: 10px;
+            display: inline-block;
+            min-width: 150px;
+        }
+        .timer.warning {
+            animation: pulse 1s infinite;
+        }
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+        }
+        .input-group {
+            margin-bottom: 20px;
+        }
+        input[type="number"] {
+            width: 100%;
+            padding: 15px;
+            font-size: 1.2em;
+            border: 3px solid #667eea;
+            border-radius: 10px;
+            text-align: center;
+            outline: none;
+            transition: all 0.3s;
+        }
+        input[type="number"]:focus {
+            border-color: #764ba2;
+            box-shadow: 0 0 10px rgba(102, 126, 234, 0.3);
+        }
+        button {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border: none;
+            padding: 15px 40px;
+            font-size: 1.2em;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: transform 0.2s, box-shadow 0.2s;
+            font-weight: bold;
+            margin: 5px;
+        }
+        button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+        }
+        button:active {
+            transform: translateY(0);
+        }
+        button:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+        .feedback {
+            margin-top: 20px;
+            padding: 15px;
+            border-radius: 10px;
+            font-size: 1.2em;
+            font-weight: bold;
+            display: none;
+        }
+        .feedback.show {
+            display: block;
+        }
+        .feedback.higher {
+            background: #fff3cd;
+            color: #856404;
+        }
+        .feedback.lower {
+            background: #d1ecf1;
+            color: #0c5460;
+        }
+        .feedback.win {
+            background: #d4edda;
+            color: #155724;
+            font-size: 1.5em;
+        }
+        .feedback.lose {
+            background: #f8d7da;
+            color: #721c24;
+        }
+        .game-over {
+            display: none;
+            margin-top: 20px;
+        }
+        .game-over.show {
+            display: block;
+        }
+        .attempts {
+            margin-top: 15px;
+            color: #666;
+            font-size: 1.1em;
+        }
+        .real-price {
+            margin-top: 10px;
+            font-size: 1.3em;
+            color: #e74c3c;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-  <h1>Juste Prix</h1>
-  <input type="number" id="proposition" placeholder="Entrez votre proposition">
-  <button id="essayer">Essayer</button>
-  <p id="resultat"></p>
-  <p id="historique"></p>
-  <script src="scripts/page1.js"></script>
+    <div class="container">
+        <h1>🎯 LE JUSTE PRIX</h1>
+
+        <div id="gameArea">
+            <img id="productImage" class="product-image" src="" alt="Produit">
+            <div id="productName" class="product-name"></div>
+
+            <div class="timer" id="timer">01:00</div>
+
+            <div class="input-group">
+                <input type="number" id="priceInput" placeholder="Entrez votre prix en €" min="0" step="0.01">
+            </div>
+
+            <button id="submitBtn" onclick="submitGuess()">Proposer</button>
+
+            <div class="attempts" id="attempts">Tentatives: 0</div>
+
+            <div id="feedback" class="feedback"></div>
+
+            <div id="gameOver" class="game-over">
+                <div class="real-price" id="realPrice"></div>
+                <button onclick="newGame()">Nouvelle Partie</button>
+            </div>
+        </div>
+    </div>
+    <script>
+        const products = [
+            {
+                name: "iPhone 15 Pro",
+                price: 1229.00,
+                image: "https://images.unsplash.com/photo-1695048133142-1a20484d2569?w=400&h=400&fit=crop"
+            },
+            {
+                name: "PlayStation 5",
+                price: 549.00,
+                image: "https://images.unsplash.com/photo-1606813907291-d86efa9b94db?w=400&h=400&fit=crop"
+            },
+            {
+                name: "MacBook Air M2",
+                price: 1299.00,
+                image: "https://images.unsplash.com/photo-1517336714731-489689fd1ca8?w=400&h=400&fit=crop"
+            },
+            {
+                name: "Nike Air Jordan",
+                price: 189.00,
+                image: "https://images.unsplash.com/photo-1556906781-9a412961c28c?w=400&h=400&fit=crop"
+            },
+            {
+                name: "AirPods Pro",
+                price: 279.00,
+                image: "https://images.unsplash.com/photo-1606841837239-c5a1a4a07af7?w=400&h=400&fit=crop"
+            },
+            {
+                name: "Nintendo Switch",
+                price: 299.00,
+                image: "https://images.unsplash.com/photo-1578303512597-81e6cc155b3e?w=400&h=400&fit=crop"
+            }
+        ];
+
+        let currentProduct;
+        let timeLeft = 60;
+        let timerInterval;
+        let gameActive = false;
+        let attempts = 0;
+
+        function startGame() {
+            currentProduct = products[Math.floor(Math.random() * products.length)];
+            timeLeft = 60;
+            attempts = 0;
+            gameActive = true;
+            document.getElementById('productImage').src = currentProduct.image;
+            document.getElementById('productName').textContent = currentProduct.name;
+            document.getElementById('priceInput').value = '';
+            document.getElementById('priceInput').disabled = false;
+            document.getElementById('submitBtn').disabled = false;
+            document.getElementById('feedback').classList.remove('show');
+            document.getElementById('gameOver').classList.remove('show');
+            document.getElementById('attempts').textContent = 'Tentatives: 0';
+            document.getElementById('realPrice').textContent = '';
+            startTimer();
+        }
+
+        function startTimer() {
+            updateTimerDisplay();
+            timerInterval = setInterval(() => {
+                timeLeft--;
+                updateTimerDisplay();
+                if (timeLeft <= 10) {
+                    document.getElementById('timer').classList.add('warning');
+                }
+                if (timeLeft <= 0) {
+                    endGame(false);
+                }
+            }, 1000);
+        }
+
+        function updateTimerDisplay() {
+            const minutes = Math.floor(timeLeft / 60);
+            const seconds = timeLeft % 60;
+            document.getElementById('timer').textContent =
+                `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+        }
+
+        function submitGuess() {
+            if (!gameActive) return;
+            const guess = parseFloat(document.getElementById('priceInput').value);
+
+            if (isNaN(guess) || guess <= 0) {
+                showFeedback('Veuillez entrer un prix valide !', 'higher');
+                return;
+            }
+
+            attempts++;
+            document.getElementById('attempts').textContent = `Tentatives: ${attempts}`;
+
+            // Condition stricte : le prix doit être exactement le bon
+            if (guess === currentProduct.price) {
+                endGame(true);
+            } else if (guess > currentProduct.price) {
+                showFeedback('C\'est MOINS ! 📉', 'lower');
+            } else {
+                showFeedback('C\'est PLUS ! 📈', 'higher');
+            }
+
+            document.getElementById('priceInput').value = '';
+            document.getElementById('priceInput').focus();
+        }
+
+        function showFeedback(message, type) {
+            const feedback = document.getElementById('feedback');
+            feedback.textContent = message;
+            feedback.className = 'feedback show ' + type;
+        }
+
+        function endGame(won) {
+            gameActive = false;
+            clearInterval(timerInterval);
+            document.getElementById('priceInput').disabled = true;
+            document.getElementById('submitBtn').disabled = true;
+            document.getElementById('timer').classList.remove('warning');
+
+            if (won) {
+                showFeedback(`🎉 BRAVO ! Le prix était ${currentProduct.price}€ ! Trouvé en ${attempts} tentative(s) !`, 'win');
+            } else {
+                document.getElementById('realPrice').textContent = `Le prix exact était : ${currentProduct.price}€`;
+                showFeedback(`⏱️ Temps écoulé !`, 'lose');
+            }
+
+            document.getElementById('gameOver').classList.add('show');
+        }
+
+        function newGame() {
+            startGame();
+        }
+
+        document.getElementById('priceInput').addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') {
+                submitGuess();
+            }
+        });
+
+        startGame();
+    </script>
 </body>
 </html>
