--- a/index.html
+++ b/index.html
@@ -1400,7 +1400,7 @@
             { type: 'emoji', value: '🔥' },
             { type: 'emoji', value: '💎' },
             { type: 'emoji', value: '🌟' },
-            // { type: 'image', value: 'images/avatars/avatar1.png' },
+            { type: 'image', value: 'images/avatars/rainbow_dash.gif' },
             // { type: 'image', value: 'images/avatars/avatar2.png' },
             // { type: 'image', value: 'images/avatars/avatar3.png' },
         ];
