--- a/page1-v-test2.html
+++ b/page1-v-test2.html
@@ -921,6 +921,7 @@
             { name: 'Instruments de musique', icon: '🎸', unlockCost: 3500, unlockLevel: 3 },
             { name: 'Objets Rétro & Vintage', icon: '📼', unlockCost: 1500, unlockLevel: 2 },
             { name: 'Figurines & Collectibles', icon: '🧸', unlockCost: 2000, unlockLevel: 2 },
+            { name: 'Décoration Artistique', icon: '🎨', unlockCost: 2500, unlockLevel: 2 },
             { name: 'Produits Insolites', icon: '🪄', unlockCost: 1800, unlockLevel: 2 },
             { name: 'Luxury Fashion', icon: '👑', unlockCost: 20000, unlockLevel: 7 },
             { name: 'Artisanat & Fait-main', icon: '🪵', unlockCost: 2000, unlockLevel: 2 }
@@ -1096,6 +1097,18 @@
                 { name: "Prime 1 Studio Batman Statue", price: 1199.00, image: "https://images.unsplash.com/photo-1601814933824-fd0b574dd592?w=400&h=400&fit=crop", link: "https://www.prime1studio.com/", requiredLevel: 5 },
                 { name: "LEGO Creator Expert Taj Mahal", price: 369.99, image: "https://images.unsplash.com/photo-1587654780291-39c9404d746b?w=400&h=400&fit=crop", link: "https://www.lego.com/fr-fr/product/taj-mahal-10256", requiredLevel: 6 }
             ],
+            'Décoration Artistique': [
+                { name: "Philips Hue Play Gradient Lightstrip", price: 239.99, image: "https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?w=400&h=400&fit=crop", link: "https://www.philips-hue.com/fr-fr/p/hue-white-and-color-ambiance-play-gradient-lightstrip/046677560423", requiredLevel: 1 },
+                { name: "Nanoleaf Shapes Triangles", price: 199.99, image: "https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?w=400&h=400&fit=crop", link: "https://nanoleaf.me/fr-FR/products/shapes/", requiredLevel: 1 },
+                { name: "Govee DreamView T1 TV Backlight", price: 89.99, image: "https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?w=400&h=400&fit=crop", link: "https://govee.com/products/govee-dreamview-t1-tv-backlight", requiredLevel: 2 },
+                { name: "IKEA SYMFONISK Cadre Sonos", price: 219.00, image: "https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?w=400&h=400&fit=crop", link: "https://www.ikea.com/fr/fr/p/symfonisk-cadre-avec-enceinte-wifi-noir-50487996/", requiredLevel: 2 },
+                { name: "Meural Canvas II Digital Art", price: 599.00, image: "https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?w=400&h=400&fit=crop", link: "https://meural.com/products/meural-canvas-ii", requiredLevel: 3 },
+                { name: "Yeelight Aurora Lightstrip Plus", price: 119.99, image: "https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?w=400&h=400&fit=crop", link: "https://www.yeelight.com/en_US/product/yeelight-aurora", requiredLevel: 3 },
+                { name: "Twinkly Smart LED String 250", price: 179.99, image: "https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?w=400&h=400&fit=crop", link: "https://www.twinkly.com/products/strings/", requiredLevel: 4 },
+                { name: "Artiphon Orba 2", price: 149.00, image: "https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?w=400&h=400&fit=crop", link: "https://artiphon.com/products/orba-2", requiredLevel: 4 },
+                { name: "Samsung The Frame 55\"", price: 1499.00, image: "https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?w=400&h=400&fit=crop", link: "https://www.samsung.com/fr/tvs/the-frame/", requiredLevel: 5 },
+                { name: "Lume Cube Cordless Ring Light", price: 99.95, image: "https://images.unsplash.com/photo-1513506003901-1e6a229e2d15?w=400&h=400&fit=crop", link: "https://lumecube.com/products/cordless-ring-light", requiredLevel: 6 }
+            ],
             'Produits Insolites': [
                 { name: "Ember Temperature Control Mug", price: 129.95, image: "https://images.unsplash.com/photo-1514228742587-6b1558fcca3d?w=400&h=400&fit=crop", link: "https://ember.com/products/ember-mug-2", requiredLevel: 1 },
                 { name: "Flipper Zero Multi-Tool", price: 169.00, image: "https://images.unsplash.com/photo-1550745165-9bc0b252726f?w=400&h=400&fit=crop", link: "https://flipperzero.one/", requiredLevel: 1 },
@@ -1121,6 +1134,7 @@
                 { name: "Dior Saddle Bag", price: 3200.00, image: "https://images.unsplash.com/photo-1584917865442-de89df76afd3?w=400&h=400&fit=crop", link: "https://www.dior.com/fr/fr", requiredLevel: 6 }
             ]
         };
+
 
         let currentProduct;
         let timeLeft = 60;
